# rust-log-normalizer

./: .gitignore  Cargo.toml  README.md
src/: format.rs  main.rs  pipeline.rs  sink.rs
src/transform/: mod.rs  syslog.rs  windows.rs
test/data/json/: sample-1.json  sample-2.json  sample-3.json
