[package]
name = "rust-log-normalizer"
version = "0.1.0"
edition = "2021"
description = "A TCP service that normalizes RFC 3164 syslog and NDJSON event streams into a common format."

[[bin]]
name = "rust-log-normalizer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "fs", "sync"] }
tokio-stream = { version = "0.1", features = ["time"] }
tokio-util = { version = "0.7", features = ["codec"] }
